--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^0.18.1",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/icons-material": "^5.10.9",
+    "@mui/material": "^5.10.11",
+    "axios": "^1.1.3",
     "bootstrap": "^4.3.1",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
@@ -11,12 +15,13 @@
     "react": "^16.8.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.0",
+    "react-icons": "^4.6.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.3",
     "react-table": "^6.10.0",
-    "recharts": "latest",
-    "reactstrap": "^7.0.2"
+    "reactstrap": "^7.0.2",
+    "recharts": "^2.1.16"
   },
   "scripts": {
     "start": "react-scripts start",
