--- a/package.json
+++ b/package.json
@@ -17,11 +17,11 @@
     "react-dom": "^16.8.0",
     "react-icons": "^4.6.0",
     "react-moment": "^0.8.4",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.3",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^5.0.1",
     "react-table": "^6.10.0",
     "reactstrap": "^7.0.2",
-    "recharts": "^2.1.16"
+    "recharts": "^0.22.5"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -37,5 +37,8 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "babel-plugin-react-require": "^3.1.3"
+  }
 }
