--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "@mui/material": "^5.10.11",
     "axios": "^1.1.3",
     "bootstrap": "^4.3.1",
+    "chart.js": "^4.0.1",
     "moment": "^2.23.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.4",
     "react": "^16.8.0",
     "react-bootstrap": "^1.3.0",
+    "react-chartjs-2": "^5.0.1",
     "react-dom": "^16.8.0",
     "react-icons": "^4.6.0",
     "react-moment": "^0.8.4",
