--- a/package.json
+++ b/package.json
@@ -7,23 +7,32 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.9",
     "@mui/material": "^5.10.11",
+    "@mui/x-date-pickers": "^5.0.8",
+    "@stomp/stompjs": "^6.1.2",
     "axios": "^1.1.3",
+    "basic-react-timepicker": "^1.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^4.0.1",
-    "moment": "^2.23.0",
+    "date-fns": "^2.29.3",
+    "moment": "^2.29.4",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.4",
-    "react": "^16.8.0",
+    "react": "^16.14.0",
     "react-bootstrap": "^1.3.0",
     "react-chartjs-2": "^5.0.1",
-    "react-dom": "^16.8.0",
+    "react-dom": "^16.14.0",
     "react-icons": "^4.6.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "^2.1.3",
+    "react-stomp": "^5.1.0",
     "react-table": "^6.10.0",
+    "react-time-picker": "^5.1.0",
     "reactstrap": "^7.0.2",
-    "recharts": "^0.22.5",
+    "recharts": "^2.1.16",
+    "sockjs-client": "^1.6.1",
+    "stompjs": "^2.3.3",
+    "victory": "^36.6.8",
     "yarn": "^1.22.19"
   },
   "scripts": {
