--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "bootstrap": "^4.3.1",
     "chart.js": "^4.0.1",
     "date-fns": "^2.29.3",
+    "json-rpc-2.0": "^1.4.2",
+    "jsonrpc-lite": "^2.2.0",
     "moment": "^2.29.4",
+    "node-json-rpc2": "^1.1.0",
     "prop-types": "^15.6.2",
     "randomcolor": "^0.5.4",
     "react": "^16.14.0",
@@ -22,14 +25,15 @@
     "react-chartjs-2": "^5.0.1",
     "react-dom": "^16.14.0",
     "react-icons": "^4.6.0",
+    "react-jsonrpc-client": "^1.0.0",
     "react-moment": "^0.8.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^5.0.1",
     "react-stomp": "^5.1.0",
     "react-table": "^6.10.0",
     "react-time-picker": "^5.1.0",
     "reactstrap": "^7.0.2",
-    "recharts": "^2.1.16",
+    "recharts": "^2.2.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
     "victory": "^36.6.8",
